<resources>
    <string name="app_name">Campus Recruitment Student</string>
    <string name="title_activity_student_navbar">StudentNavbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_jobs">Jobs</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_edit_details">Edit Details</string>
    <string name="menu_applied_jobs">Applied Jobs</string>
    <string name="menu_feedback">Feedback</string>
</resources>
