<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_application"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_jobs" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_edit_details"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_edit_details" />
        <item
            android:id="@+id/nav_new_application"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_applied_jobs" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
